--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,33 @@
 {
-    "name": "buonzz/composer-library-template",
-    "description": "Boilerplate package for creating other packages.",
-    "keywords": ["template", "composer", "package"],
-    "license": "DBAD",
-    "authors": [
-        {
-            "name": "Darwin Biler",
-            "email": "buonzz@gmail.com"
-        }
-    ],
-    "type": "project",
-    "require": {
-		"php": ">=7.1"
-    },
-    "require-dev": {
-		"phpunit/phpunit": "6.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Buonzz\\Template\\": "src/"
-        }
+  "name": "joshuachinemezu/ci-toastr",
+  "description": "Codeigniter library for integrating javascript toastr",
+  "keywords": [
+    "codeigniter",
+    "javascript",
+    "toastr",
+    "composer",
+    "library",
+    "session",
+    "user interface"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Joshua Chinemezu",
+      "email": "joshuachinemezu@gmail.com"
     }
+  ],
+  "type": "codeigniter-library",
+  "require": {
+    "php": ">=5.3.0",
+    "composer/installers": "~1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "6.*"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  }
 }
